# adelante

./: .gitignore  README.md  package-lock.json  package.json
contracts/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/invoice/: Cargo.toml
contracts/invoice/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Button.tsx  Input.tsx  Modal.tsx  StatusBadge.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/near/: AccountDisplay.tsx  CrossChainAddresses.tsx  index.ts
frontend/src/components/wallet/: WalletButton.tsx
frontend/src/config/: near.ts
frontend/src/hooks/: useChainSignatures.ts  useEscrow.ts  useInvoices.ts  useMarketplace.ts  useUSDCToken.ts
frontend/src/lib/: chainSignatures.ts  format.ts  ipfs.ts  near.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Invoice.tsx  Marketplace.tsx
frontend/src/stores/: invoiceStore.ts  walletStore.ts
frontend/src/types/: index.ts
scripts/: build-contracts.sh  demo.sh  deploy.sh  seed-data.sh
