[workspace]
resolver = "2"
members = [
    "invoice",
    "marketplace",
    "escrow"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adelante/adelante"

[workspace.dependencies]
near-sdk = { version = "5.6.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
